force-app/main/default/objects/Channel_Partner__c/fields/CP_Firm_Type__c.field-meta.xml
<CustomField>
    <fullName>CP_Firm_Type__c</fullName>
    <label>CP Firm Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CP_Firm_Type</valueSetName>
    </valueSet>
</CustomField>