force-app/main/default/objects/Channel_Partner__c/fields/CP_Type__c.field-meta.xml
<CustomField>
    <fullName>CP_Type__c</fullName>
    <label>CP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CP_Type</valueSetName>
    </valueSet>
</CustomField>