force-app/main/default/objects/Channel_Partner__c/fields/Is_CP_Created_by_GRE__c.field-meta.xml
<CustomField>
    <fullName>Is_CP_Created_by_GRE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CP Created by GRE</label>
    <type>Checkbox</type>
</CustomField>