force-app/main/default/objects/Channel_Partner__c/fields/IS_CP_Created_From_Walk_in_From__c.field-meta.xml
<CustomField>
    <fullName>IS_CP_Created_From_Walk_in_From__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS CP Created From Walk-in From</label>
    <type>Checkbox</type>
</CustomField>