force-app/main/default/objects/Channel_Partner__c/fields/Is_GST_Registration_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Is_GST_Registration_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is GST Registration Certificate</label>
    <type>Checkbox</type>
</CustomField>