force-app/main/default/objects/Channel_Partner__c/fields/Is_PAN_Card__c.field-meta.xml
<CustomField>
    <fullName>Is_PAN_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PAN Card</label>
    <type>Checkbox</type>
</CustomField>