force-app/main/default/objects/Channel_Partner__c/fields/Is_RERA_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Is_RERA_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is RERA Certificate</label>
    <type>Checkbox</type>
</CustomField>