force-app/main/default/objects/Channel_Partner__c/fields/MahaRERA_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>MahaRERA_Registration_No__c</fullName>
    <label>MahaRERA Registration No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>