force-app/main/default/objects/Channel_Partner__c/fields/RERA_Available__c.field-meta.xml
<CustomField>
    <fullName>RERA_Available__c</fullName>
    <label>RERA Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>