force-app/main/default/objects/Channel_Partner__c/fields/Sub_Zone__c.field-meta.xml
<CustomField>
    <fullName>Sub_Zone__c</fullName>
    <label>Sub Zone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Zone__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Zone</valueSetName>
    </valueSet>
</CustomField>