force-app/main/default/objects/Channel_Partner__c/fields/TAN_No__c.field-meta.xml
<CustomField>
    <fullName>TAN_No__c</fullName>
    <label>TAN No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>