force-app/main/default/objects/Channel_Partner__c/validationRules/Is_CP_Created_by_GRE_only_for_GREs.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_CP_Created_by_GRE_only_for_GREs</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
  AND (
      ISNEW(),
      Is_CP_Created_by_GRE__c = true,
      $Profile.Name != &apos;GRE&apos;
  ),
  true,
  false
)</errorConditionFormula>
    <errorMessage>&quot;Is CP Created by GRE&quot; can only be checked by GRE</errorMessage>
</ValidationRule>