force-app/main/default/objects/Channel_Partner__c/validationRules/Is_CP_Created_by_GRE_Validation_for_GRE.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_CP_Created_by_GRE_Validation_for_GRE</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
  AND (
    ISNEW(),
    Is_CP_Created_by_GRE__c = false,
    $Profile.Name == &apos;GRE&apos;
  ),
  true,
  false
)</errorConditionFormula>
    <errorMessage>GRE&apos;s must select &quot;Is CP Created by GRE&quot; checkbox</errorMessage>
</ValidationRule>