force-app/main/default/objects/Channel_Partner__c/validationRules/MahaRERA_Registration_Number_when_RERA.validationRule-meta.xml
<ValidationRule>
    <fullName>MahaRERA_Registration_Number_when_RERA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(RERA_Available__c, &quot;YES&quot;),
    ISBLANK(MahaRERA_Registration_No__c)
)</errorConditionFormula>
    <errorDisplayField>MahaRERA_Registration_No__c</errorDisplayField>
    <errorMessage>You must provide a MahaRERA Registration Number when RERA is available</errorMessage>
</ValidationRule>