force-app/main/default/objects/Channel_Partner__c/validationRules/Mobile_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    ISBLANK(Mobile__c),
    NOT(REGEX(Mobile__c, &quot;[0-9]{10}&quot;))
)</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Mobile number must be exactly 10 digits and cannot be blank</errorMessage>
</ValidationRule>