force-app/main/default/objects/Channel_Partner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CP_Unique_Code__c</columns>
    <columns>CP_Type__c</columns>
    <columns>RERA_Available__c</columns>
    <columns>Zone__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>